# octobatch

./: README.md  pyproject.toml
docs/frontend-designs/: README.md  audit-log-view.html  campaign-details-view.html  campaign-homepage.html  changesets-and-pull-request-view.html  new-campaign-spec-editor.html  repository-targets-view.html  run-details-view.html
docs/operations/: bootstrap.md
docs/specs/spec-1/: design.md  requirements.md  task-001-foundations-bootstrap.md  task-002-spec-schema-versioning.md  task-003-repo-selection-engine.md  task-004-preview-pipeline.md  task-005-publish-pipeline.md  task-006-reconcile-loop.md  task-007-bulk-actions.md  task-008-cli-parity.md  task-009-optional-integrations.md  task-010-follow-up-workflows.md  task-011-hardening-observability.md  tasks.md
docs/steering/: product.md  structure.md  tech.md
helm/octobatch/: Chart.yaml  values.yaml
helm/octobatch/templates/: _helpers.tpl  deployment.yaml  networkpolicy.yaml  service.yaml  serviceaccount.yaml
specs/: spec-1.md
src/octobatch/api_gateway/: app.py  main.py
src/octobatch/campaign/: app.py  main.py
src/octobatch/common/: health.py  settings.py  web.py
src/octobatch/selection/: app.py  main.py
src/octobatch/token/: app.py  cache.py  main.py  service.py
